--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react-dom": "^18.0.6",
     "framer-motion": "^6.4.3",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
+    "react-select-async-paginate": "^0.6.2",
     "typescript": "^4.7.4",
     "web-vitals": "^0.2.4"
   },
